--- a/reactchess/practicechesscode.html
+++ b/reactchess/practicechesscode.html
@@ -1,333 +1,119 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chess Game with CPU</title>
-  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-  <script src="https://unpkg.com/@babel/standalone@7.10.3/babel.min.js" crossorigin></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(45deg, #283048, #859398);
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: Arial, sans-serif;
-    }
+      case 'k':
+        return Math.abs(rowDiff) <= 1 && Math.abs(colDiff) <= 1;
 
-    #root {
-      background-color: rgba(255, 255, 255, 0.1);
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5);
-    }
-
-    .turn-info {
-      color: white;
-      font-size: 18px;
-      margin-bottom: 15px;
-      text-align: center;
-    }
-    
-    .button-container {
-      margin-bottom: 15px;
-      text-align: center;
-    }
-
-    .board-container {
-      display: flex;
-      justify-content: center;
-    }
-  </style>
-</head>
-<body>
-  <div id="root"></div>
-
-  <script type="text/babel" data-presets="react,stage-3">
-    const initialGameState = [
-      ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
-      ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
-      ['', '', '', '', '', '', '', ''],
-      ['', '', '', '', '', '', '', ''],
-      ['', '', '', '', '', '', '', ''],
-      ['', '', '', '', '', '', '', ''],
-      ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
-      ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
-    ];
-
-    const pieceImages = {
-      'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
-      'n': 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
-      'b': 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
-      'q': 'https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg',
-      'k': 'https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg',
-      'p': 'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg',
-      'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
-      'N': 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg',
-      'B': 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg',
-      'Q': 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg',
-      'K': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
-      'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
-    };
-
-    function Game() {
-      const [game, setGame] = React.useState(initialGameState);
-      const [selectedSquare, setSelectedSquare] = React.useState(null);
-      const [isWhiteTurn, setIsWhiteTurn] = React.useState(true);
-      const [gameOver, setGameOver] = React.useState(false);
-      const [inCheck, setInCheck] = React.useState(false);
-      const [checkedKingPosition, setCheckedKingPosition] = React.useState(null);
-      const [isTTSEnabled, setIsTTSEnabled] = React.useState(true); // State to manage TTS
-
-      // Function to toggle TTS on or off
-      function toggleTTS() {
-        setIsTTSEnabled(!isTTSEnabled);
-      }
-
-      // Function to announce the current player's turn using speech synthesis
-      function announceTurn(player) {
-        if (isTTSEnabled) {
-          const utterance = new SpeechSynthesisUtterance(`${player}'s turn`);
-          window.speechSynthesis.speak(utterance);
-        }
-      }
-
-      // Function to announce when a king is in check
-      function announceCheck(player) {
-        if (isTTSEnabled) {
-          const utterance = new SpeechSynthesisUtterance(`${player} King is in check!`);
-          window.speechSynthesis.speak(utterance);
-        }
-      }
-
-      // Start or restart the game
-      function startRestartGame() {
-        setGame(initialGameState);
-        setSelectedSquare(null);
-        setIsWhiteTurn(true);
-        setGameOver(false);
-        setInCheck(false);
-        setCheckedKingPosition(null);
-        announceTurn("White"); // Announce white's turn at the beginning of the game
-      }
-
-      // Handle square click for moving pieces
-      function handleClick(row, col) {
-        if (gameOver || !isWhiteTurn) return; // Player can only move if it's White's turn
-
-        const currentPlayer = 'White'; // Only human player is White
-
-        if (selectedSquare) {
-          const [selectedRow, selectedCol] = selectedSquare;
-          const selectedPiece = game[selectedRow][selectedCol];
-          const targetPiece = game[row][col];
-
-          if (selectedPiece && isPlayerPiece(selectedPiece, true)) {
-            if (targetPiece === '' || isOpponentPiece(selectedPiece, targetPiece)) {
-              const newGame = game.map(row => row.slice());
-
-              if (targetPiece.toLowerCase() === 'k') {
-                setGameOver(true);
-                alert(`Game Over! ${currentPlayer} wins by capturing the King.`);
-              }
-
-              if (isValidMove(selectedPiece, selectedRow, selectedCol, row, col, newGame)) {
-                newGame[row][col] = selectedPiece;
-                newGame[selectedRow][selectedCol] = '';
-                setGame(newGame);
-                setSelectedSquare(null);
-                setIsWhiteTurn(false);
-
-                // Announce Black's turn (CPU turn)
-                announceTurn("Black");
-
-                setTimeout(cpuMove, 500); // Delay the CPU move slightly
-              } else {
-                setSelectedSquare(null);
-              }
-            } else {
-              setSelectedSquare(null);
-            }
-          } else {
-            setSelectedSquare(null);
-          }
-        } else {
-          if (game[row][col] && isPlayerPiece(game[row][col], true)) {
-            setSelectedSquare([row, col]);
-          }
-        }
-      }
-
-      function isPlayerPiece(piece, isWhiteTurn) {
-        return isWhiteTurn ? piece === piece.toUpperCase() : piece === piece.toLowerCase();
-      }
-
-      function isOpponentPiece(piece, target) {
-        return (piece.toUpperCase() === piece && target.toLowerCase() === target) || 
-               (piece.toLowerCase() === piece && target.toUpperCase() === target);
-      }
-
-      function isValidMove(piece, startRow, startCol, targetRow, targetCol, newGame) {
-        const rowDiff = targetRow - startRow;
-        const colDiff = targetCol - startCol;
-
-        switch (piece.toLowerCase()) {
-          case 'p':
-            const direction = isWhiteTurn ? -1 : 1;
-            const startRowForPawn = isWhiteTurn ? 6 : 1;
-            if (colDiff === 0 && rowDiff === direction && newGame[targetRow][targetCol] === '') {
-              return true;
-            }
-            if (colDiff === 0 && rowDiff === 2 * direction && startRow === startRowForPawn && newGame[targetRow][targetCol] === '' && newGame[startRow + direction][startCol] === '') {
-              return true;
-            }
-            if (Math.abs(colDiff) === 1 && rowDiff === direction && newGame[targetRow][targetCol] !== '' && isOpponentPiece(piece, newGame[targetRow][targetCol])) {
-              return true;
-            }
-            return false;
-
-          case 'r':
-            if (colDiff === 0 || rowDiff === 0) {
-              return !isPathBlocked(startRow, startCol, targetRow, targetCol);
-            }
-            return false;
-
-          case 'n':
-            return (Math.abs(rowDiff) === 2 && Math.abs(colDiff) === 1) || (Math.abs(rowDiff) === 1 && Math.abs(colDiff) === 2);
-
-          case 'b':
-            return Math.abs(rowDiff) === Math.abs(colDiff) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
-
-          case 'q':
-            if (colDiff === 0 || rowDiff === 0 || Math.abs(rowDiff) === Math.abs(colDiff)) {
-              return !isPathBlocked(startRow, startCol, targetRow, targetCol);
-            }
-            return false;
-
-          case 'k':
-            return Math.abs(rowDiff) <= 1 && Math.abs(colDiff) <= 1;
-
-          default:
-            return false;
-        }
-      }
-
-      function isPathBlocked(startRow, startCol, targetRow, targetCol) {
-        const rowStep = targetRow > startRow ? 1 : targetRow < startRow ? -1 : 0;
-        const colStep = targetCol > startCol ? 1 : targetCol < startCol ? -1 : 0;
-        let row = startRow + rowStep;
-        let col = startCol + colStep;
-        while (row !== targetRow || col !== targetCol) {
-          if (game[row][col] !== '') return true;
-          row += rowStep;
-          col += colStep;
-        }
+      default:
         return false;
-      }
+    }
+  }
 
-      // Function for the CPU (Black) to make a move
-      function cpuMove() {
-        const newGame = game.map(row => row.slice());
-        const availableMoves = [];
+  function isPathBlocked(startRow, startCol, targetRow, targetCol) {
+    const rowStep = targetRow > startRow ? 1 : targetRow < startRow ? -1 : 0;
+    const colStep = targetCol > startCol ? 1 : targetCol < startCol ? -1 : 0;
+    let row = startRow + rowStep;
+    let col = startCol + colStep;
+    while (row !== targetRow || col !== targetCol) {
+      if (game[row][col] !== '') return true;
+      row += rowStep;
+      col += colStep;
+    }
+    return false;
+  }
 
-        // Find all possible moves for the CPU
-        for (let row = 0; row < game.length; row++) {
-          for (let col = 0; col < game[row].length; col++) {
-            const piece = game[row][col];
-            if (piece !== '' && !isPlayerPiece(piece, true)) { // CPU's pieces (Black)
-              for (let targetRow = 0; targetRow < game.length; targetRow++) {
-                for (let targetCol = 0; targetCol < game[targetRow].length; targetCol++) {
-                  if (isValidMove(piece, row, col, targetRow, targetCol, newGame)) {
-                    availableMoves.push({ piece, startRow: row, startCol: col, targetRow, targetCol });
-                  }
-                }
+  // Function for the CPU (Black) to make a move
+  function cpuMove() {
+    const newGame = game.map(row => row.slice());
+    const availableMoves = [];
+
+    // Find all possible moves for the CPU
+    for (let row = 0; row < game.length; row++) {
+      for (let col = 0; col < game[row].length; col++) {
+        const piece = game[row][col];
+        if (piece !== '' && isPlayerPiece(piece, false)) { // CPU's pieces (Black)
+          for (let targetRow = 0; targetRow < game.length; targetRow++) {
+            for (let targetCol = 0; targetCol < game[targetRow].length; targetCol++) {
+              if (isValidMove(piece, row, col, targetRow, targetCol, newGame)) {
+                availableMoves.push({ piece, startRow: row, startCol: col, targetRow, targetCol });
               }
             }
           }
         }
-
-        if (availableMoves.length === 0) {
-          setGameOver(true);
-          alert("Game Over! White wins.");
-          return;
-        }
-
-        // Randomly choose one of the available moves
-        const randomMove = availableMoves[Math.floor(Math.random() * availableMoves.length)];
-        newGame[randomMove.targetRow][randomMove.targetCol] = randomMove.piece;
-        newGame[randomMove.startRow][randomMove.startCol] = '';
-        setGame(newGame);
-        setIsWhiteTurn(true);
-
-        // Check if CPU captures the White King
-        if (randomMove.piece.toLowerCase() === 'k') {
-          setGameOver(true);
-          alert("Game Over! Black wins by capturing the King.");
-        } else {
-          announceTurn("White"); // Announce White's turn
-        }
       }
-
-      return (
-        <div>
-          <div className="turn-info">
-            {gameOver ? "Game Over!" : `Current Turn: ${isWhiteTurn ? 'White' : 'Black (CPU)'}`}
-          </div>
-          <div className="button-container">
-            <button onClick={startRestartGame}>{gameOver ? 'Restart Game' : 'Start/Restart Game'}</button>
-            <button onClick={toggleTTS}>{isTTSEnabled ? 'Disable TTS' : 'Enable TTS'}</button> {/* TTS toggle button */}
-          </div>
-          <div className="board-container">
-            <Board game={game} selectedSquare={selectedSquare} onClick={handleClick} />
-          </div>
-        </div>
-      );
     }
 
-    function Board({ game, selectedSquare, onClick }) {
-      return (
-        <div style={{ display: 'grid', gridTemplateColumns: 'repeat(8, 60px)', gridGap: 0 }}>
-          {game.map((row, rowIndex) =>
-            row.map((square, colIndex) => (
-              <Square
-                key={`${rowIndex}-${colIndex}`}
-                piece={square}
-                selected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
-                onClick={() => onClick(rowIndex, colIndex)}
-              />
-            ))
-          )}
-        </div>
-      );
+    if (availableMoves.length === 0) {
+      setGameOver(true);
+      announceEvent("Game Over! White wins.");
+      return;
     }
 
-    function Square({ piece, selected, onClick }) {
-      const backgroundColor = selected ? '#a9d7ff' : (piece !== '' ? '#f0d9b5' : '#b58863');
-      return (
-        <div
-          onClick={onClick}
-          style={{
-            width: '60px',
-            height: '60px',
-            backgroundColor,
-            display: 'flex',
-            justifyContent: 'center',
-            alignItems: 'center',
-            cursor: 'pointer',
-            border: '1px solid #000',
-          }}
-        >
-          {piece && <img src={pieceImages[piece]} alt={piece} style={{ width: '50px', height: '50px' }} />}
-        </div>
-      );
-    }
+    // Randomly choose one of the available moves
+    const randomMove = availableMoves[Math.floor(Math.random() * availableMoves.length)];
+    newGame[randomMove.targetRow][randomMove.targetCol] = randomMove.piece;
+    newGame[randomMove.startRow][randomMove.startCol] = '';
+    setGame(newGame);
+    setIsWhiteTurn(true);
 
-    ReactDOM.render(<Game />, document.getElementById('root'));
-  </script>
-</body>
-</html>
+    // Check if CPU captures the White King
+    if (randomMove.piece.toLowerCase() === 'k') {
+      setGameOver(true);
+      announceEvent("Game Over! Black wins by capturing the King.");
+    } else {
+      announceTurn("White"); // Announce White's turn
+    }
+  }
+
+  return (
+    <div>
+      <div className="turn-info">
+        {gameOver ? "Game Over!" : `Current Turn: ${isWhiteTurn ? 'White' : 'Black (CPU)'}`}
+      </div>
+      <div className="button-container">
+        <button onClick={startRestartGame}>{gameOver ? 'Restart Game' : 'Start/Restart Game'}</button>
+        <button onClick={toggleTTS}>{isTTSEnabled ? 'Disable TTS' : 'Enable TTS'}</button> {/* TTS toggle button */}
+      </div>
+      <div className="board-container">
+        <Board game={game} selectedSquare={selectedSquare} onClick={handleClick} />
+      </div>
+    </div>
+  );
+}
+
+function Board({ game, selectedSquare, onClick }) {
+  return (
+    <div style={{ display: 'grid', gridTemplateColumns: 'repeat(8, 60px)', gridGap: 0 }}>
+      {game.map((row, rowIndex) =>
+        row.map((square, colIndex) => (
+          <Square
+            key={`${rowIndex}-${colIndex}`}
+            piece={square}
+            selected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
+            onClick={() => onClick(rowIndex, colIndex)}
+          />
+        ))
+      )}
+    </div>
+  );
+}
+
+function Square({ piece, selected, onClick }) {
+  const backgroundColor = selected ? '#a9d7ff' : (piece !== '' ? '#f0d9b5' : '#b58863');
+  return (
+    <div
+      onClick={onClick}
+      style={{
+        width: '60px',
+        height: '60px',
+        backgroundColor,
+        display: 'flex',
+        justifyContent: 'center',
+        alignItems: 'center',
+        cursor: 'pointer',
+        border: '1px solid #000',
+      }}
+    >
+      {piece && <img src={pieceImages[piece]} alt={piece} style={{ width: '50px', height: '50px' }} />}
+    </div>
+  );
+}
+
+ReactDOM.render(<Game />, document.getElementById('root'));
