--- a/reactchess/practicechesscode.html
+++ b/reactchess/practicechesscode.html
@@ -43,6 +43,30 @@
       display: flex;
       justify-content: center;
     }
+
+    table {
+      border-collapse: collapse;
+    }
+
+    td {
+      width: 60px;
+      height: 60px;
+      text-align: center;
+      vertical-align: middle;
+      cursor: pointer;
+    }
+
+    .white-square {
+      background-color: #f0d9b5;
+    }
+
+    .black-square {
+      background-color: #b58863;
+    }
+
+    .selected {
+      background-color: lightblue;
+    }
   </style>
 </head>
 <body>
@@ -82,14 +106,12 @@
       const [gameOver, setGameOver] = React.useState(false);
       const [inCheck, setInCheck] = React.useState(false);
       const [checkedKingPosition, setCheckedKingPosition] = React.useState(null);
-      const [isTTSEnabled, setIsTTSEnabled] = React.useState(true); // State to manage TTS
+      const [isTTSEnabled, setIsTTSEnabled] = React.useState(true);
 
-      // Function to toggle TTS on or off
       function toggleTTS() {
         setIsTTSEnabled(!isTTSEnabled);
       }
 
-      // Function to announce the current player's turn using speech synthesis
       function announceTurn(player) {
         if (isTTSEnabled) {
           const utterance = new SpeechSynthesisUtterance(`${player}'s turn`);
@@ -97,7 +119,6 @@
         }
       }
 
-      // Function to announce when a king is in check
       function announceCheck(player) {
         if (isTTSEnabled) {
           const utterance = new SpeechSynthesisUtterance(`${player} King is in check!`);
@@ -105,7 +126,6 @@
         }
       }
 
-      // Start or restart the game
       function startRestartGame() {
         setGame(initialGameState);
         setSelectedSquare(null);
@@ -113,10 +133,9 @@
         setGameOver(false);
         setInCheck(false);
         setCheckedKingPosition(null);
-        announceTurn("White"); // Announce white's turn at the beginning of the game
+        announceTurn("White");
       }
 
-      // Handle square click for moving pieces
       function handleClick(row, col) {
         if (gameOver) return;
 
@@ -142,17 +161,13 @@
                 setGame(newGame);
                 setSelectedSquare(null);
                 setIsWhiteTurn(!isWhiteTurn);
-
-                // Announce the next player's turn after a move
                 const nextPlayer = isWhiteTurn ? "Black" : "White";
                 announceTurn(nextPlayer);
-
-                // Check if the opponent's king is now in check
                 const opponentKingPos = findKing(newGame, isWhiteTurn ? 'k' : 'K');
                 if (isKingInCheck(newGame, opponentKingPos, !isWhiteTurn)) {
                   setInCheck(true);
                   setCheckedKingPosition(opponentKingPos);
-                  announceCheck(isWhiteTurn ? "Black" : "White"); // Announce check for the opponent's king
+                  announceCheck(isWhiteTurn ? "Black" : "White");
                   alert(`${currentPlayer} has placed the opponent's King in check!`);
                 } else {
                   setInCheck(false);
@@ -306,7 +321,6 @@
           newGame[startRow][startCol] = '';
           setGame(newGame);
           setIsWhiteTurn(true);
-          // Announce White's turn after Black's move
           announceTurn("White");
           
           // Check if the opponent's king is now in check
@@ -335,22 +349,19 @@
               <tbody>
                 {game.map((row, rowIndex) => (
                   <tr key={rowIndex}>
-                    {row.map((piece, colIndex) => (
-                      <td
-                        key={colIndex}
-                        onClick={() => handleClick(rowIndex, colIndex)}
-                        style={{
-                          width: '60px',
-                          height: '60px',
-                          textAlign: 'center',
-                          verticalAlign: 'middle',
-                          backgroundColor: (selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex) ? 'lightblue' : 'white',
-                          cursor: 'pointer'
-                        }}
-                      >
-                        {piece ? <img src={pieceImages[piece]} alt={piece} style={{ width: '50px', height: '50px' }} /> : null}
-                      </td>
-                    ))}
+                    {row.map((piece, colIndex) => {
+                      const isSelected = selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex;
+                      const squareColor = (rowIndex + colIndex) % 2 === 0 ? 'white-square' : 'black-square';
+                      return (
+                        <td
+                          key={colIndex}
+                          onClick={() => handleClick(rowIndex, colIndex)}
+                          className={`${squareColor} ${isSelected ? 'selected' : ''}`}
+                        >
+                          {piece ? <img src={pieceImages[piece]} alt={piece} style={{ width: '50px', height: '50px' }} /> : null}
+                        </td>
+                      );
+                    })}
                   </tr>
                 ))}
               </tbody>
